devops/k8s-manifests/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: hse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          imagePullPolicy: Always
          image: registry.gitlab.com/hse_students/hse_ramus/core/auth:main
          
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 5

          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: regcred
