devops/k8s-manifests/comms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comms
  namespace: hse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comms
  template:
    metadata:
      labels:
        app: comms
    spec:
      containers:
        - name: comms
          imagePullPolicy: Always
          image: registry.gitlab.com/hse_students/hse_ramus/core/comms:main

          livenessProbe:
            httpGet:
              path: /liveness
              port: 3032
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3032
            initialDelaySeconds: 10
            periodSeconds: 5

          ports:
             - containerPort: 8032
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: regcred
