devops/k8s-manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: hse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          imagePullPolicy: Always
          image: registry.gitlab.com/hse_students/hse_ramus/core/frontend:main
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: regcred
