devops/k8s-manifests/group-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group
  namespace: hse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
  template:
    metadata:
      labels:
        app: group
    spec:
      containers:
        - name: group
          imagePullPolicy: Always
          image: registry.gitlab.com/hse_students/hse_ramus/core/group:main
          
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3050
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3050
            initialDelaySeconds: 10
            periodSeconds: 5
          
          ports:
             - containerPort: 8050
             
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: regcred
