devops/k8s-manifests/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  namespace: hse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          imagePullPolicy: Always
          image: registry.gitlab.com/hse_students/hse_ramus/core/posts:main
          
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3036
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3036
            initialDelaySeconds: 10
            periodSeconds: 5
          
          ports:
             - containerPort: 8036
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: regcred
