devops/k8s-manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: hse-app
  labels:
    app: auth
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: "http"
  type: ClusterIP
  selector:
    app: auth
