devops/k8s-manifests/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: hse-app
  labels:
    app: chat
spec:
  ports:
    - port: 8040
      targetPort: 8040
      protocol: TCP
      name: "http"
  type: ClusterIP
  selector:
    app: chat
