devops/k8s-manifests/comms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comms
  namespace: hse-app
  labels:
    app: comms
spec:
  ports:
    - port: 8032
      targetPort: 8032
      protocol: TCP
      name: "http"
  type: ClusterIP
  selector:
    app: comms
