devops/k8s-manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: hse-app
  labels:
    app: front
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: "http"
  type: ClusterIP
  selector:
    app: front
