devops/k8s-manifests/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: hse-app
  labels:
    app: posts
spec:
  ports:
    - port: 8036
      targetPort: 8036
      protocol: TCP
      name: "http"
  type: ClusterIP
  selector:
    app: posts
